--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ configurations {
 	}
 }
 
+
 repositories {
 	mavenCentral()
 }
@@ -32,11 +33,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	// Spring Messaging 라이브러리 추가
+	implementation 'org.springframework:spring-messaging'
 	//stomp
 	implementation 'org.webjars:stomp-websocket:2.3.3'
 	implementation 'org.webjars:webjars-locator-core'
 	implementation 'org.webjars:sockjs-client:1.0.2'
-
+	implementation 'org.webjars:jquery:3.6.0'
 	// jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
@@ -46,3 +49,10 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+apply plugin: 'java'
+
+compileJava {
+	options.compilerArgs << "-parameters"
+}
+
